--- a/frontend/src/components/Offset/Offset.css
+++ b/frontend/src/components/Offset/Offset.css
@@ -8,18 +8,20 @@
   width: 50vw;
   margin-left: 50px;
   margin-top: 20px;
-  height: 135vh;
+  height: 100%;
 }
 .OffsetHeading h1 {
   font-size: 50px;
-  font-weight: 400;
+  font-weight: 700;
+  color: green;
   margin: 25px 10px;
   letter-spacing: 7px;
   text-align: center;
+  text-transform: uppercase;
 }
 .Offset h6 {
   font-size: 25px;
-  /* margin: 20px 0px; */
+  margin: 20px 0px;
   margin-bottom: 20px;
   width: 80%;
   /* text-align: center; */
@@ -29,13 +31,76 @@
   margin: 25px 0px;
 }
 .WhatisOffsetting h1 {
-  font-size: 35px;
+  font-size: 30px;
+  font-weight: 420;
+  text-transform: uppercase;
 }
 .WhyOffsetting h2 {
-  font-size: 35px;
+  font-size: 30px;
+  font-weight: 500;
+  text-transform: uppercase;
 }
 .OffsettingQuestions h3 {
   font-size: 25px;
   color: green;
   margin-bottom: 10px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+.OffsettingQuestions {
+  margin-bottom: 50px;
+}
+.EasyWays h1{
+  font-size: 30px;
+  font-weight: 500;
+  margin: 20px 0px;
+  text-transform: uppercase;
+}
+.EasyWays h3{
+  font-size: 25px;
+
+  margin-bottom: -20px;
+}
+.EasyWays p{
+  font-size: 20px;
+}
+.WaysToOffset h1{
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+}
+.WaysToOffset .CardContent{
+  display: flex;
+  flex-direction: row;
+  /* margin: 5px 10px; */
+  margin-bottom: 30px;
+}
+
+@media (max-width: 768px) {
+  .Earth {
+    display: none;
+  }
+  .OffsetContent {
+    margin-left: 0px;
+    width: 100vw;
+    align-items: center;
+    margin: 10px 30px;
+  }
+  .Offset {
+    /* width: 100vh; */
+  }
+  .YTVideo {
+    margin-left: -35px;
+    /* width: 200px; */
+    margin-bottom: 30px;
+  }
+  .WaysToOffset .CardContent{
+    display: flex;
+    flex-direction: column;
+    /* margin: 5px 10px; */
+    margin-bottom: 30px;
+    justify-content: center;
+    align-items: center;
+  }
 }
