--- a/frontend/src/components/Offset/OffsetCard.css
+++ b/frontend/src/components/Offset/OffsetCard.css
@@ -3,7 +3,7 @@
   width: fit-content;
   text-align: center;
   padding: 10px;
-  margin: 0px 10px;
+  margin: 0px 20px;
 }
 .OffsetCard img {
   width: 150px;
@@ -40,10 +40,12 @@
         justify-content: center;
         justify-content: space-around;
         display: flex;
-        flex-direction: column;
+        flex-direction:column;
         text-align: center;
     }
     .CardContent{
         display: flex;
+        flex-direction: column;
+        width: 100%;
     }
 }
