--- a/frontend/src/components/Landing/Landing.css
+++ b/frontend/src/components/Landing/Landing.css
@@ -48,8 +48,15 @@
     display: flex;
     column-gap: 4rem;
     padding-left: 3rem;
+    margin-top: 2rem;
 }
 
 .cards{
     border: 2px solid red;
+}
+
+.about{
+    font-size: 4rem;
+    font-weight: 200;
+    text-align: center;
 }
