--- a/frontend/src/components/MainPage/Navbar.css
+++ b/frontend/src/components/MainPage/Navbar.css
@@ -31,16 +31,24 @@ li {
   grid-template-columns: 10rem 1fr 2fr 1fr 10rem;
   /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
-  background-color: rgba(50, 159, 50, 0.888);
+  background-color: rgba(86, 185, 86, 0.888);
+  
 }
-
+.logo{
+  height: 10rem;
+  width: 10rem;
+}
 /* .logo {
   display: grid;
   grid-column: 2/3;
   justify-content: start;
   align-items: center;
 } */
-
+.logo img{
+  mix-blend-mode: color-burn;
+  height: 10rem;
+  width: 10rem;
+}
 
 .menu-link {
   grid-column: 3/4;
@@ -90,22 +98,30 @@ li {
 
 .menu-link ul li {
   font-size: 2.2rem;
+  
 }
 
 .menu-link ul li a {
   text-transform: capitalize;
-  color: rgba(0, 0, 3, 0.8);
+  /* color: rgba(0, 0, 3, 0.8); */
   transition: 0.5s;
   text-decoration: none;
+  font-family: cursive;
+  color: rgb(15, 14, 14);
 }
 .menu-link ul li:hover > a {
   transform-origin: left;
-  color: rgb(222, 199, 199);
+  /* color: rgb(222, 199, 199); */
+  color: black;
   text-decoration: none;
   transition: 0.5s;
-
+  
 }
-
+.menu-link ul li:hover{
+  background-color: rgb(53, 174, 53);
+  border-radius: 10px;
+  transition: 0.5s;
+}
 .social-media ul li {
   font-size: 1.8rem;
 }
