--- a/frontend/src/components/ContactUs/ContactUs.css
+++ b/frontend/src/components/ContactUs/ContactUs.css
@@ -1,45 +1,61 @@
-.contact{
-    /* border: 2px solid; */
-    height:90vh;
-    background-image: linear-gradient(rgb(204, 227, 204),rgb(84, 187, 84));
-    z-index: -1;
+.contact {
+  /* border: 2px solid; */
+  height: 90vh;
+  background-image: linear-gradient(rgb(204, 227, 204), rgb(84, 187, 84));
+  z-index: -1;
+  align-items: center;
+}
+.ContactProfiles {
+  display: flex;
+  margin: 10px 0px;
 }
 
-.content{
-    position: absolute;
-    margin-left: 23rem;
-    bottom: 0;
-    left: 0;
-    /* border: 2px solid; */
-    height:45rem;
-    width:90rem;
-    z-index: 3;
-    background-color: white;
-    border-radius: 20px;
-    box-shadow: 10px 10px 50px rgb(51, 127, 51);
-    margin-bottom: 3rem;
+.content {
+  position: absolute;
+  /* margin-left: 23rem; */
+
+  bottom: 0;
+  left: 20%;
+  /* border: 2px solid; */
+  /* height:100%; */
+  width: 90rem;
+  z-index: 3;
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: 10px 10px 50px rgb(51, 127, 51);
+  margin-bottom: 15rem;
+  padding: 20px;
+}
+.ContactUS {
+  display: flex;
+  justify-content: space-around;
 }
 
-.content h1{
-    font-size: 5rem;
-    margin-left: 2rem;
-    margin-top: 1rem;
-    font-weight: 200;
+.content h1 {
+  font-size: 5rem;
+  margin-left: 2rem;
+  margin-top: 1rem;
+  font-weight: 200;
 }
 
-.content h2{
-    font-size: 2rem;
-    font-weight: 300;
-    margin-left: 2rem;
-    margin-top: 1rem;
+.content h2 {
+  font-size: 3rem;
+  font-weight: 300;
+  margin-left: 2rem;
+  margin-top: 1rem;
 }
 
-.content p{
-    font-size: 1.2rem;
-    margin-left: 2rem;
+.content p {
+  font-size: 1.2rem;
+  margin-left: 2rem;
 }
 
-.content img{
-    height: 3rem;
-    margin-left: 2rem;
+.SocialMedia {
+  height: 6rem;
+  margin-left: 2rem;
+  align-items: center;
+}
+.ProfilePicture {
+  width: 15rem;
+  border-radius: 20px;
 }
