--- a/frontend/src/components/Landing/Landing.css
+++ b/frontend/src/components/Landing/Landing.css
@@ -100,8 +100,24 @@
     height: 3rem;
     width: 4rem;
 }
+@media (max-width:1327px)
+{
+    hr{
+        margin-top: 4rem;
+    }
+}
 
+@media (max-width:1250px){
+    hr{
+        margin-top:7rem;
+    }
+}
 
+@media (max-width:1190px){
+    hr{
+        margin-top: 9rem;
+    }
+}
 @media (max-width:768px){
     .first h1{
         margin-top: 4rem;
@@ -114,17 +130,18 @@
     }
 
     .second h1{
-        margin-top: 8rem;
+        margin-top: 9rem;
     }
     .carousel{
         margin-top: 8rem;
     }
     hr{
-        margin-top: 9rem;
+        margin-top: 19rem;
     }
     .carousel-inner{
         width: 50rem;
         height: 40rem;
     }
+    
 }
 
