--- a/frontend/src/components/MainPage/Footer.css
+++ b/frontend/src/components/MainPage/Footer.css
@@ -16,6 +16,7 @@
     font-size: 3rem;
     font-weight: 200;
     color: white;
+       
 }
 
 .firstfooter h2{
@@ -23,6 +24,9 @@
     margin-top: 2rem;
     font-weight: 200;
     color: white;
+    /* border: 2px solid white;  */
+    display: inline-block;
+    width: 100%;
 }
 
 .firstfooter p{
@@ -34,5 +38,9 @@
 @media (max-width:768px){
     footer{
         margin-top: 20rem;
+        width:auto;
+    }
+    .firstfooter h2{
+         font-size: 1.5rem;
     }
 }
