--- a/frontend/src/components/Landing/Landing.css
+++ b/frontend/src/components/Landing/Landing.css
@@ -145,3 +145,69 @@
     
 }
 
+@media (max-width:1024px){
+    hr{
+        margin-top: 15rem;
+    }
+}
+
+@media (max-width:870px){
+    hr{
+        margin-top:18rem;
+    }
+}
+
+@media(max-width:665px){
+    hr{
+        margin-top: 22rem;
+    }
+}
+
+@media(max-width:614px){
+    hr{
+        margin-top: 26rem;
+    }
+}
+
+@media (max-width:560px){
+    hr{
+        margin-top: 30rem;
+    }
+}
+
+@media (max-width:495px)
+{
+    hr{
+        margin-top:33rem ;
+    }
+}
+
+@media (max-width:467px){
+    hr{
+        margin-top: 38rem;
+    }
+
+    .carousel-inner{
+        width: 30rem;
+        height: 35rem;
+    }
+
+    .first h1{
+        font-size: 3.6rem;
+    }
+    .carousel-control-prev-icon{
+        margin-top: 10rem;
+    }
+    .carousel-control-next-icon{
+        margin-top: 10rem;
+    }
+}
+
+@media(max-width:380px){
+    .second h1{
+        margin-top: 12rem;
+    }
+    .carousel-inner{
+        margin-bottom: 4rem;
+    }
+}
