--- a/frontend/src/components/Compare/Compare.css
+++ b/frontend/src/components/Compare/Compare.css
@@ -7,16 +7,31 @@
 .MonthlyComparisonHeading h1 {
   font-size: 4rem;
 }
+.MonthlyComparisonHeading {
+  margin: 20px 0px;
+}
+.LineGraph {
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  margin: 20px 0px;
+}
 .ComparisonWithFriend h1 {
   font-size: 4rem;
+  margin-bottom: 20px;
 }
 .ComparisonWithFriend {
-  align-items: center;
+  margin: 30px 0px;
+}
+.ComparisonWithFriend form {
   justify-content: center;
   text-align: center;
+  /* width: fit-content; */
+  position: relative;
+  left: 37%;
 }
-.CompareEmmission h1{
-    font-size: 2.5rem;
+.CompareEmmission h1 {
+  font-size: 2.5rem;
 }
 .ReturnBAck {
   font-size: 2rem;
@@ -34,4 +49,9 @@
   background-color: lightgreen;
   color: darkgreen;
   margin: 15px;
+}
+@media(max-width:768px){
+    .ComparisonWithFriend form{
+        left: 0%;
+    }
 }
