--- a/frontend/src/components/Landing/Landing.css
+++ b/frontend/src/components/Landing/Landing.css
@@ -102,29 +102,22 @@
 }
 @media (max-width:1327px)
 {
-    hr{
-        margin-top: 4rem;
+    
+    .carousel{
+        margin-top: 5rem;
     }
 }
 
-@media (max-width:1250px){
-    hr{
-        margin-top:7rem;
-    }
-}
-
-@media (max-width:1190px){
-    hr{
-        margin-top: 9rem;
+@media (max-width:1080px){
+    .carousel{
+        margin-top:11rem
     }
 }
 @media (max-width:768px){
     .first h1{
         margin-top: 4rem;
     }
-     .second{
-        text-align: center;
-     }
+    
     .second h2{
         margin-left: 4rem;
     }
@@ -133,59 +126,33 @@
         margin-top: 9rem;
     }
     .carousel{
-        margin-top: 8rem;
-    }
-    hr{
-        margin-top: 19rem;
+        margin-top: 17rem;
     }
     .carousel-inner{
         width: 50rem;
         height: 40rem;
     }
+    .second h2{
+        margin-left: 3rem;
+    }
     
 }
-
-@media (max-width:1024px){
-    hr{
-        margin-top: 15rem;
-    }
-}
-
-@media (max-width:870px){
-    hr{
-        margin-top:18rem;
-    }
-}
-
-@media(max-width:665px){
-    hr{
+@media (max-width:615px){
+    .carousel{
         margin-top: 22rem;
     }
-}
 
-@media(max-width:614px){
-    hr{
-        margin-top: 26rem;
+    .carousel h1{
+        font-size: 3rem;
     }
 }
-
-@media (max-width:560px){
-    hr{
-        margin-top: 30rem;
+@media (max-width:565px){
+    .carousel{
+        margin-top: 28rem;
     }
 }
-
-@media (max-width:495px)
-{
-    hr{
-        margin-top:33rem ;
-    }
-}
-
 @media (max-width:467px){
-    hr{
-        margin-top: 38rem;
-    }
+
 
     .carousel-inner{
         width: 30rem;
@@ -201,13 +168,45 @@
     .carousel-control-next-icon{
         margin-top: 10rem;
     }
+
+    .carousel{
+        margin-top: 37rem;
+    }
+
+    .carousel h1{
+        font-size: 2.6rem;
+    }
+
+    .second h1{
+        margin-top: 13rem;
+    }
 }
 
-@media(max-width:380px){
-    .second h1{
-        margin-top: 12rem;
+@media(max-width:415px){
+    .carousel{
+        margin-top: 39rem;
     }
+
+    .carousel h1{
+        font-size: 3rem;
+    }
+}
+
+@media (max-width:398px){
+    .carousel{
+        margin-top: 34rem;
+    }
+    .second h1{
+        font-size: 1.7rem;
+    }
+}
+
+@media (max-width:380px){
+    .carousel{
+        margin-top: 270px;
+    }
+
     .carousel-inner{
-        margin-bottom: 4rem;
+        height: 300px;
     }
 }
