--- a/frontend/src/components/auth/LoginPage.css
+++ b/frontend/src/components/auth/LoginPage.css
@@ -7,7 +7,7 @@
 
 .cover{
    
-    top: 0;
+    top: -2rem;
     position: absolute;
     left: -0%;
     width: 100%;
@@ -88,5 +88,12 @@
         width: 30rem;
         height: 42rem;
     }
+}
+
+@media (max-width:380px){
+    .cover h1{
+        margin-top: 5px;
+    }
+    
 }
 
