--- a/frontend/src/components/Compare/Compare.css
+++ b/frontend/src/components/Compare/Compare.css
@@ -3,6 +3,11 @@
   justify-content: center;
   align-items: center;
 }
+.MonthlyComparison {
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+}
 
 .MonthlyComparisonHeading h1 {
   font-size: 4rem;
