--- a/frontend/src/components/MainPage/Navbar.css
+++ b/frontend/src/components/MainPage/Navbar.css
@@ -11,6 +11,7 @@ html {
   font-size: 62.5%;
 }
 
+
 a {
   text-decoration: none;
 }
@@ -52,7 +53,9 @@ li {
   height: 10rem;
   display: flex;
   justify-content: space-around;
+  /* justify-content: space-between; */
   align-items: center;
+  width: 90rem;
 }
 
 .social-media {
