--- a/frontend/src/components/ContactUs/ContactUs.css
+++ b/frontend/src/components/ContactUs/ContactUs.css
@@ -1,6 +1,6 @@
 .contact {
   /* border: 2px solid; */
-  height: 55rem;
+  height: 70rem;
   background-image: linear-gradient(rgb(204, 227, 204), rgb(84, 187, 84));
   z-index: -1;
   align-items: center;
@@ -23,12 +23,11 @@
   border-radius: 20px;
   box-shadow: 10px 10px 50px rgb(51, 127, 51);
   /* padding: 20px; */
-  height: 35rem;
+  height: 45rem;
   top: 28%;
 }
 .ContactUS {
-  display: flex;
-  justify-content: space-around;
+  padding: 12px;
 }
 
 .content h1 {
