--- a/frontend/src/components/Compare/Compare.css
+++ b/frontend/src/components/Compare/Compare.css
@@ -5,7 +5,7 @@
   position: relative;
   /* background-color: red; */
   /* background-color: rgb(84,  187,  84); */
-  background-image: linear-gradient(rgb(224, 248, 224), rgb(84,  187,  84));
+  background-color: rgb(172, 224, 194);
 }
 
 .VirtualBadges img {
