--- a/frontend/src/components/Compare/Compare.css
+++ b/frontend/src/components/Compare/Compare.css
@@ -4,8 +4,8 @@
   align-items: center;
   position: relative;
   /* background-color: red; */
-  background-color: rgb(84,  187,  84);
-  /* background-color: rgb(182, 237, 205); */
+  /* background-color: rgb(84,  187,  84); */
+  background-image: linear-gradient(rgb(220, 232, 220), rgb(121, 183, 121));
 }
 
 .VirtualBadges img {
